Update Directus to 10.8.2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   directus:
-    image: directus/directus:latest
+    image: directus/directus:10.8.2
     ports:
       - 8055:8055
     volumes:
